--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,17 +5,18 @@
     <title>Title</title>
     <style>
         body{
-            background: url(https://images.wallpaperscraft.com/image/dolls_many_people_smile_88090_1920x1080.jpg) no-repeat;
+            background: url(https://images.wallpaperscraft.com/image/spots_background_line_abstraction_66994_1280x720.jpg) no-repeat;
             background-size: 100%;
         }
     </style>
 </head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <body>
 
 <nav aria-disabled="true" class="navbar navbar-dark bg-dark">
-    <a class="nav-link" href="http://localhost:8080/web/client/get/list">ClientWebController </a>
-    <a class="nav-link" href="http://localhost:8080/web/travelRoute/get/list/">TravelRouteWebController </a>
-    <a class="nav-link" href="http://localhost:8080/web/tripTicket/get/list/">TripTicketWebController</a>
+    <a class="nav-link" href="http://localhost:8080/web/client/get/list">Client </a>
+    <a class="nav-link" href="http://localhost:8080/web/travelRoute/get/list/">Travel Route </a>
+    <a class="nav-link" href="http://localhost:8080/web/tripTicket/get/list/">Trip Ticket</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
